お願いします

--- a/vercel.json
+++ b/vercel.json
@@ -5,9 +5,7 @@
     }
   },
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/api/$1"
-    }
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/", "dest": "/index_top.php" }
   ]
 }
