--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
   "functions": {
     "api/*.php": {
-      "runtime": "vercel-php@0.7.4"
+      "runtime": "vercel-php@0.3.1"
     }
   },
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/", "dest": "/index_top.php" }
+    { "src": "/", "dest": "/index.php" },
+    { "src": "/api/(.*)", "dest": "/api/$1" }
   ]
 }
