デプロイ用調整

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,15 @@
 {
   "functions": {
+    "*.php": {
+      "runtime": "vercel-php@0.7.4"
+    },
     "api/*.php": {
       "runtime": "vercel-php@0.7.4"
     }
   },
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    }
+    { "src": "^/$", "dest": "/index_top.php" },
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/$1" }
   ]
 }
