--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,12 @@
 {
   "functions": {
-    "*.php": {
-      "runtime": "vercel-php@0.7.4"
-    },
     "api/*.php": {
       "runtime": "vercel-php@0.7.4"
     }
   },
   "routes": [
-    { "src": "^/$", "dest": "/index_top.php" },
+    { "src": "^/$", "dest": "/api/index_top.php" },
     { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/$1" }
+    { "src": "/api/(.*)", "dest": "/api/$1" }
   ]
 }
